SEAMJMS-41 fixed duplicate diposers.  SEAMJMS-40 removed the combined jar.  Started on SEAMJMS-36

--- a/examples/jms-statuswatcher/src/main/webapp/watchstatus.xhtml
+++ b/examples/jms-statuswatcher/src/main/webapp/watchstatus.xhtml
@@ -12,11 +12,10 @@
 </h:head>
 <h:body>
     <h:form>
-
         <div class="watchmenu">
             <div class="watchtitle">StatusWatcher</div>
             <div class="menuitem">
-                <h:selectBooleanCheckbox id="changeFollowing" onchange="submit();"
+                <h:selectBooleanCheckbox id="changeFollowing" 
                                          value="#{receivingClient.followAll}"
                                          valueChangeListener="#{receivingClient.changeFollowing}"/>
                 Follow all
